# beepboop3000

./: .gitignore  README.md  commands.md
config/netplan/: 50-cloud-init.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bb3/lib/bb3/: bb3
install/bb3/share/bb3/: local_setup.sh  package.bash  package.sh  package.zsh
log/: latest_build
ros2_ws/: run.md
ros2_ws/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/cpp_pubsub/src/: Motor.cpp  Motor.h  Vehicle.cpp  Vehicle.h  main.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/bb3/lib/bb3/: bb3
ros2_ws/install/bb3/share/ament_index/resource_index/parent_prefix_path/: bb3
ros2_ws/install/bb3/share/bb3/: local_setup.sh  package.dsv  package.ps1  package.sh
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/bb3/: CMakeLists.txt
ros2_ws/src/bb3/src/: Motor.cpp  Motor.h  Vehicle.cpp  Vehicle.h  main.cpp
src/: motor_test.cpp  start.sh  test
